# TinyScript

examples/game/: CMakeLists.txt
test/src/: test.c
